fixed cropper size to integer to prevent float number on image size which could lead to void space on the edge of the image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   --scrollthumb: hsl(0,0%,67%);
   --scrollthumb-light: hsl(0,0%,77%);
   --upload-caption-width: 20rem;
-  --upload-image-width: calc(min(50vw, 800px));
+  --upload-image-width: calc(min(100vw - 200px, 600px));
 }
 
 .icon {
